syntax="proto3";

package pbs;

option go_package = "../genpb";

message PutArgs{
	string key = 1;
	string value = 2;
}

message PutReply{
	string Success = 1;
	int64 ErrCode = 2;
	string ErrMsg = 3;
}

message GetArgs{
	string Key =1;
}

message GetReply{
	string Value = 1;
	int64 ErrCode = 2;
	string ErrMsg = 3;
}

service KvService{
	rpc DoPut(PutArgs) returns (PutReply){}
	rpc DoGet(GetArgs) returns (GetReply){}
}

